# 02_homework

./: CMakeLists.txt  LICENSE  build.sh
.github/workflows/: build.yml
include/: ipaddress.hpp  split.hpp
src/: main.cpp  split.cpp
test/: ipaddress_test.cpp  split_test.cpp
